Refactor Opal hierarchy so Ephemeral opals don't have a bunch of irrelevant, UnsupportedOperationException-throwing methods.  In addition, Opal and TransactionalOpal are now sealed classes so it is easier to check that all different types of opals are being handled at each point.